correcion de errores

--- a/Proyecto_Camiones/crear_rutas.html
+++ b/Proyecto_Camiones/crear_rutas.html
@@ -29,7 +29,7 @@
             </ul>
         </nav>
         <hr>
-    <section class="form-crear-rutas">
+    <form action="" method="post" class="form-crear-rutas">
         <label for="password">Ingrese el código del camión</label>
         <input class="form-datos" type="string" name="codigo_camion" id="codigo_camion" placeholder="Ingrese el codigo del camion">
         <label for="password">Ingrese el código del conductor</label>
@@ -41,7 +41,9 @@
         <label for="password">Ingrese la fecha de finalización</label>
         <input class="form-datos" type="string" name="fecha_final" id="fecha_final" placeholder="Ingrese la fecha de llegada estimada">
         <p>Antes de continuar, asegurese de que los datos ingresados son correctos</p>
-        <input class="btn-crear" type="submit" value="GUARDAR DATOS">
-    </section>
+        <button type="submit" class="btn-crear">
+            GUARDAR DATOS
+        </button>
+    </form>
 </body>
 </html>
