--- a/Proyecto_Camiones/ingreso_camiones.html
+++ b/Proyecto_Camiones/ingreso_camiones.html
@@ -29,7 +29,7 @@
             </ul>
         </nav>
         <hr>
-    <section class="form-ingreso_camiones">
+    <form action="" method="post" class="form-ingreso_camiones">
         <label for="password">Ingrese la marca del camion</label>
         <input class="form-datos" type="string" name="marca" id="marca" placeholder="Ingrese la marca del camion">
         <label for="password">Ingrese el modelo del camion</label>
@@ -37,7 +37,9 @@
         <label for="password">Ingrese la capacidad de carga</label>
         <input class="form-datos" type="string" name="capacidad" id="capacidad" placeholder="Ingrese la capacidad de carga">
         <p>Antes de continuar, asegurese de que los datos ingresados son correctos</p>
-        <input class="btn-ingreso_camiones" type="submit" value="GUARDAR DATOS">
-    </section>
+        <button type="submit" class="btn-ingreso_camiones">
+            GUARDAR DATOS
+        </button>
+    </form>
 </body>
 </html>
