--- a/Proyecto_Camiones/programar_ruta.html
+++ b/Proyecto_Camiones/programar_ruta.html
@@ -29,7 +29,7 @@
             </ul>
         </nav>
         <hr>
-    <section class="form-programar-rutas">
+    <form action="" method="post" class="form-programar-rutas">
         <label for="password">Ingrese un nombre para la ruta</label>
         <input class="form-datos" type="string" name="nombre_ruta" id="nombre" placeholder="Ingrese el nombre de la ruta">
         <label for="password">Asigne un tiempo estimado</label>
@@ -41,7 +41,9 @@
         <label for="password">Ingrese el punto de llegada</label>
         <input class="form-datos" type="string" name="punto_llegada" id="llegada" placeholder="Ingrese el punto de llegada">
         <p>Antes de continuar, asegurese de que los datos ingresados son correctos</p>
-        <input class="btn-prograrmar" type="submit" value="GUARDAR DATOS">
-    </section>
+        <button type="submit" class="btn-prograrmar">
+            GUARDAR DATOS
+        </button>
+    </form>
 </body>
 </html>
