--- a/Proyecto_Camiones/registro.html
+++ b/Proyecto_Camiones/registro.html
@@ -48,7 +48,9 @@
         <input class="form-datos" type="password" name="contraseña" id="contraseña" placeholder="Ingrese la contraseña">
         <label for="password">Especifique si es adminstrador o conductor</label>
         <input class="form-datos" type="string" name="tipo" id="tipo" placeholder="Ingrese el tipo de usuario">
-        <input class="btn-registro" type="submit" value="REGISTRARSE">
+        <button type="submit" class="btn-registro">
+            REGISTRARSE
+        </button>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="registro.js"></script>
