--- a/Proyecto_Camiones/login.html
+++ b/Proyecto_Camiones/login.html
@@ -16,7 +16,9 @@
         <!-- PASSWORD INPUT -->
         <label for="password">Contraseña</label>
         <input type="password" placeholder="Ingresa tu contraseña">
-        <a href="pagina_inicio.html"><input type="button" value="Ingresar"></a>
+        <button type="submit" class="btn-ingreso">
+          Ingresar
+        </button>
         <a href="">¿Perdiste tu contraseña?</a><br>
       </form>
     </div>
