Agregación de imágenes, elementos y correciones menores.

--- a/Proyecto_Camiones/pagina_inicio.html
+++ b/Proyecto_Camiones/pagina_inicio.html
@@ -67,12 +67,17 @@
                 <p>Tenga a su disposición los nuevos trayectos que va a recorrer en un futuro no lejano</p>
                 <a href="crear_rutas.html"><i class="fa fa-angle-double-left"></i> Crear ruta <i class="fas fa-angle-double-right"></i></a>
             </div>
+            <div>
+                <img src="imagenes/estado_vias.jpg" alt="Estado vias">
+                <h3>Verifique como están los caminos que se van a recorrer</h3>
+                <p>No se arriesgue a perder tiempo y dinero sin antes verificar que las vías están en buen estado y sean seguras para sus conductores</p>
+                <a href="https://www.invias.gov.co/767/estadovias.html"><i class="fa fa-angle-double-left"></i> Analizar estado de las vías <i class="fas fa-angle-double-right"></i></a>
+            </div>
         </div>
     </div>
     <!-- SCROLL REVEAL -->
     <script src="https://unpkg.com/scrollreveal"></script>
-    
+    <!-- AXIOS -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
 </body>
 </html>
